Infrastructure/istio/templates/gateway/neg/infra-gateway-neg-dev.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: infra-gateway-neg-dev
  namespace: istio-system
spec:
  selector:
    istio: gateway-neg-dev
  servers:
    - hosts:
        - "*.caringcm.com.tw"
      port:
        name: http
        number: 80
        protocol: HTTP
